# scratch

./: page-example.html  scratch.cabal  stack.yaml  tree-example.html
app/Id/: Main.hs
app/Loop/: Main.hs
app/PHP/BB/: HtmlParse.hs  Main.hs
app/SO/: example.json  so44514645.hs
app/Serial/: Recv.hs  Send.hs
app/Time/: Main.hs
src/: HTML.hs
src/PHP/: BB.hs
src/Text/HTML/Parser/: Tag.hs
src/Text/HTML/TagSoup/: Parsec.hs
