name:                scratch
version:             0.0.0

license:             GPL-3.0
license-file:        LICENSE
author:              Vladimir Pankov
maintainer:          wowofbob@gmail.com
copyright:           Copyright (C) 2017 Vladimir Pankov
homepage:            https://github.com/wowofbob/scratch
bug-reports:         https://github.com/wowofbob/scratch/issues
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     HTML
                     , PHP.BB
                     , Text.HTML.TagSoup.Parsec
                     
  build-depends:       base >=4.6 && < 4.10
                     , http-conduit
                     , bytestring
                     , text
                     , transformers
                     , tagsoup
                     , containers
                     , parsec
                       
  hs-source-dirs:      src
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable app
  build-depends:    base < 5
  build-depends:    scratch
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable time
  build-depends:    base < 5, tagsoup, bytestring, text
  build-depends:    scratch
  hs-source-dirs:   app/Time
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable php-bb
  build-depends:    base < 5
  build-depends:    scratch, text, tagsoup, bytestring
  hs-source-dirs:   app/PHP/BB
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable yesod-basic
  build-depends:    base < 5
  build-depends:    scratch, yesod
  hs-source-dirs:   app/Yesod/Basic
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
