name:                scratch
version:             0.0.0

license:             GPL-3.0
license-file:        LICENSE
author:              Vladimir Pankov
maintainer:          wowofbob@gmail.com
copyright:           Copyright (C) 2017 Vladimir Pankov
homepage:            https://github.com/wowofbob/scratch
bug-reports:         https://github.com/wowofbob/scratch/issues
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     HTML
                     , PHP.BB
                     , Text.HTML.TagSoup.Parsec
                     , Text.HTML.Parser.Tag
                     
  build-depends:       base >=4.6 && < 4.10
                     , http-conduit
                     , bytestring
                     , text
                     , transformers
                     , tagsoup
                     , containers
                     , parsec
                     , html-parse
                     , attoparsec
                       
  hs-source-dirs:      src
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable app
  build-depends:    base < 5
  build-depends:    scratch
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable time
  build-depends:    base < 5, tagsoup, bytestring, text
  build-depends:    scratch
  hs-source-dirs:   app/Time
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable php-bb
  build-depends:    base < 5
  build-depends:      scratch
                    , text
                    , tagsoup
                    , bytestring
                    , file-embed
                    , parsec
                    , attoparsec
                    , html-parse
                    
  hs-source-dirs:   app/PHP/BB
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall

executable php-bb-html-parse
  build-depends:    base < 5
  build-depends:      scratch
                    , text
                    , bytestring
                    , file-embed
                    , attoparsec
                    , html-parse
                    
  hs-source-dirs:   app/PHP/BB
  main-is:          HtmlParse.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable yesod-basic
  build-depends:    base < 5
  build-depends:    scratch, yesod
  hs-source-dirs:   app/Yesod/Basic
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable id
  build-depends:    base < 5
  build-depends:    scratch
  hs-source-dirs:   app/Id
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall

executable so-44514645
  build-depends:    base < 5
  build-depends:    scratch, aeson, file-embed, text, bytestring
  hs-source-dirs:   app/SO
  main-is:          so44514645.hs
  default-language: Haskell2010
  ghc-options:      -Wall

executable serial-send
  build-depends:    base < 5
  build-depends:    scratch, serialport, bytestring
  hs-source-dirs:   app/Serial
  main-is:          Send.hs
  default-language: Haskell2010
  ghc-options:      -Wall

executable serial-recv
  build-depends:    base < 5
  build-depends:    scratch, serialport, bytestring
  hs-source-dirs:   app/Serial
  main-is:          Recv.hs
  default-language: Haskell2010
  ghc-options:      -Wall
